# Concurrentcy

./: CMakeLists.txt  README.md  Worker.cpp  Worker.h  main.cpp  main.qml
